funciones de filtrado

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,41 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
+  <div id="PokeType">
+    <button class="type" id="water"> water </button>
+    <button class="type" id="fire"> fire </button>
+    <button class="type" id="poison">  </button>
+    <button class="type" id="normal">  </button>
+    <button class="type" id="fighting">  </button>
+    <button class="type" id="flying">  </button>
+    <button class="type" id="grass">  </button>
+    <button class="type" id="electric">  </button>
+    <button class="type" id="ground">  </button>
+    <button class="type" id="psychic">  </button>
+    <button class="type" id="rock">  </button>
+    <button class="type" id="ice">  </button>
+    <button class="type" id="bug">  </button>
+    <button class="type" id="dragon">  </button>
+    <button class="type" id="ghost">  </button>
+    <button class="type" id="dark">  </button>
+    <button class="type" id="steel">  </button>
+    <button class="type" id="fairy">  </button>
+  </div>
+  <div id="PokeEgg">
+    <button  class="egg" id="2 km"> 2 km </button>
+    <button  class="egg" id="5 km"> 5 km </button>
+    <button  class="egg" id="7 km"> 7 km </button>
+    <button  class="egg" id="10 km"> 10 km </button>
+    <button  class="egg" id="not in eggs"> Not in eggs </button>
+  </div>
+  <div id="PokeGeneration">
+    <button  class="generation" id="generation i"> Generation I </button>
+    <button  class="generation" id="generation ii"> Generation II </button>
+  </div>
+  <div id="PokeRegion">
+    <button  class="region" id="kanto"> Kanto </button>
+    <button  class="region" id="johto"> Johto </button>
+  </div>
     <script src="main.js" type="module"></script>
   </body>
 </html>
